--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
 .mainContainer {
     width: 363px;
     height: 730px;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 4.58%, rgba(0, 0, 0, 0.288) 130%);;
+    /* background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 4.58%, rgba(0, 0, 0, 0.288) 130%);; */
+    background-color: #22252D;
     backdrop-filter: blur(10px);
     border-radius: 16px;
     border: 6px solid black;
@@ -25,10 +26,10 @@ body {
     justify-content: space-between;
     text-align: center;
     border-radius: 6px;
+    margin-bottom: 12px;
 }
 
 .time, .date {
-    background-color: grey;
     width: 110px;
     height: 24px;
     color: white;
@@ -36,40 +37,30 @@ body {
     border-radius: 3px;
     font-size: 20px;
     font-weight: 500;
+    
 }
 
 .screen {
-    background-color: black;
+    color: white;
     height: 150px;
-    margin-top: 12px;
-    position: relative;
-    border: none;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    text-align: right;
+    flex: 1 1 0%;
 }
 
 .srn1 {
-    position: relative;
-    height: 80%;
     width: 100%;
-    background-color: #bccd95;
-    border: none;
-    text-align: end;
-    font-size: 34px;
-    padding: 0;
-    margin: 0;
+    font-size: 1.5rem;
+    
 }
 
 .srn2 {
-    position: relative;
-    height: 20%;
     width: 100%;
-    background-color: #bccd95;
-    border: none;
-    text-align: end;
-    font-size: 2rem;
-    padding: 0;
-    margin: 0;
+    font-size: 2.5rem;
+    font-weight: 700;
 }
 
 .buttons {
@@ -96,7 +87,6 @@ body {
     border-radius: 50%;
     margin: 0px  3px;
     background-color: #413c3c;
-    border: 2px solid black;
 }
 
 .btnSign:active{
