--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ body {
 
 .buttons {
     margin-top: 32px;
+    border-radius: 16px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px ;
 }
 
 .btn {
@@ -86,7 +88,7 @@ body {
     height: 60px;
     border-radius: 50%;
     margin: 0px  3px;
-    background-color: #413c3c;
+    background-color: #262933;
 }
 
 .btnSign:active{
