--- a/style.css
+++ b/style.css
@@ -53,7 +53,12 @@ body {
 
 .srn1 {
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 2rem;
+    text-align: end;
+    background-color: #22252D;
+    border-style: none;
+    color: white;
+    overflow: auto;
     
 }
 
@@ -61,6 +66,10 @@ body {
     width: 100%;
     font-size: 2.5rem;
     font-weight: 700;
+    text-align: end;
+    background-color: #22252D;
+    border-style: none;
+    color: white;
 }
 
 .buttons {
